// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recipe-nesting can build a one-layer recipe 1`] = `
Object {
  "achievement_id": 12,
  "components": Array [
    Object {
      "id": 19725,
      "quantity": 3,
      "type": "Item",
    },
  ],
  "daily_purchase_cap": 0,
  "disciplines": Array [
    "Artificer",
    "Weaponsmith",
    "Scribe",
    "Huntsman",
  ],
  "id": 19712,
  "merchant": undefined,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "output_range": "1-10",
  "prerequisites": Array [
    Object {
      "id": 2,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "type": "Recipe",
  "upgrade_id": undefined,
  "weekly_purchase_cap": 0,
}
`;

exports[`recipe-nesting can build a one-layer recipe with output > 1 1`] = `
Object {
  "achievement_id": undefined,
  "components": Array [
    Object {
      "id": 19725,
      "quantity": 3,
      "type": "Item",
    },
  ],
  "daily_purchase_cap": 0,
  "disciplines": Array [
    "Artificer",
    "Weaponsmith",
    "Scribe",
    "Huntsman",
  ],
  "id": 19112,
  "merchant": undefined,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 5,
  "output_range": undefined,
  "prerequisites": Array [
    Object {
      "id": 2,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "type": "Recipe",
  "upgrade_id": undefined,
  "weekly_purchase_cap": 0,
}
`;

exports[`recipe-nesting can build a two-layer recipe 1`] = `
Object {
  "achievement_id": undefined,
  "components": Array [
    Object {
      "achievement_id": 12,
      "components": Array [
        Object {
          "id": 19725,
          "quantity": 3,
          "type": "Item",
        },
      ],
      "daily_purchase_cap": 0,
      "disciplines": Array [
        "Artificer",
        "Weaponsmith",
        "Scribe",
        "Huntsman",
      ],
      "id": 19712,
      "merchant": undefined,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 1,
      "output_range": "1-10",
      "prerequisites": Array [
        Object {
          "id": 2,
          "type": "Recipe",
        },
      ],
      "quantity": 2,
      "type": "Recipe",
      "upgrade_id": undefined,
      "weekly_purchase_cap": 0,
    },
    Object {
      "achievement_id": undefined,
      "components": Array [
        Object {
          "id": 19701,
          "quantity": 2,
          "type": "Item",
        },
      ],
      "daily_purchase_cap": 0,
      "disciplines": Array [
        "Armorsmith",
        "Artificer",
        "Weaponsmith",
        "Scribe",
        "Huntsman",
        "Jeweler",
      ],
      "id": 19685,
      "merchant": undefined,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 1,
      "output_range": undefined,
      "prerequisites": Array [
        Object {
          "id": 21,
          "type": "Recipe",
        },
      ],
      "quantity": 3,
      "type": "Recipe",
      "upgrade_id": undefined,
      "weekly_purchase_cap": 0,
    },
    Object {
      "id": 1,
      "quantity": 10000,
      "type": "Currency",
    },
    Object {
      "id": 19685,
      "quantity": 1,
      "type": "Currency",
    },
  ],
  "daily_purchase_cap": 0,
  "disciplines": Array [
    "Artificer",
    "Weaponsmith",
    "Scribe",
    "Huntsman",
  ],
  "id": 12988,
  "merchant": undefined,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "output_range": undefined,
  "prerequisites": Array [
    Object {
      "id": 39,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "type": "Recipe",
  "upgrade_id": undefined,
  "weekly_purchase_cap": 0,
}
`;

exports[`recipe-nesting can build a two-layer recipe with output > 1 1`] = `
Object {
  "achievement_id": undefined,
  "components": Array [
    Object {
      "achievement_id": undefined,
      "components": Array [
        Object {
          "id": 19723,
          "quantity": 3,
          "type": "Item",
        },
      ],
      "daily_purchase_cap": 0,
      "disciplines": Array [
        "Artificer",
        "Weaponsmith",
        "Scribe",
        "Huntsman",
      ],
      "id": 19710,
      "merchant": undefined,
      "min_rating": 0,
      "multipleRecipeCount": 1,
      "output": 1,
      "output_range": undefined,
      "prerequisites": Array [
        Object {
          "id": 3,
          "type": "Recipe",
        },
      ],
      "quantity": 2,
      "type": "Recipe",
      "upgrade_id": undefined,
      "weekly_purchase_cap": 0,
    },
    Object {
      "achievement_id": undefined,
      "components": Array [
        Object {
          "id": 19697,
          "quantity": 10,
          "type": "Item",
        },
        Object {
          "id": 19704,
          "quantity": 1,
          "type": "Item",
        },
      ],
      "daily_purchase_cap": 0,
      "disciplines": Array [
        "Armorsmith",
        "Artificer",
        "Weaponsmith",
        "Scribe",
        "Huntsman",
      ],
      "id": 19679,
      "merchant": undefined,
      "min_rating": 0,
      "multipleRecipeCount": 1,
      "output": 5,
      "output_range": undefined,
      "prerequisites": Array [
        Object {
          "id": 16,
          "type": "Recipe",
        },
      ],
      "quantity": 3,
      "type": "Recipe",
      "upgrade_id": undefined,
      "weekly_purchase_cap": 0,
    },
  ],
  "daily_purchase_cap": 0,
  "disciplines": Array [
    "Artificer",
    "Weaponsmith",
    "Huntsman",
  ],
  "id": 12990,
  "merchant": undefined,
  "min_rating": 50,
  "multipleRecipeCount": 1,
  "output": 1,
  "output_range": undefined,
  "prerequisites": Array [
    Object {
      "id": 30,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "type": "Recipe",
  "upgrade_id": undefined,
  "weekly_purchase_cap": 0,
}
`;

exports[`recipe-nesting can build a two-layer recipe with output > 1 2`] = `
Object {
  "achievement_id": undefined,
  "components": Array [
    Object {
      "id": 19697,
      "quantity": 10,
      "type": "Item",
    },
    Object {
      "id": 19704,
      "quantity": 1,
      "type": "Item",
    },
  ],
  "daily_purchase_cap": 0,
  "disciplines": Array [
    "Armorsmith",
    "Artificer",
    "Weaponsmith",
    "Scribe",
    "Huntsman",
  ],
  "id": 19679,
  "merchant": undefined,
  "min_rating": 0,
  "multipleRecipeCount": 1,
  "output": 5,
  "output_range": undefined,
  "prerequisites": Array [
    Object {
      "id": 16,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "type": "Recipe",
  "upgrade_id": undefined,
  "weekly_purchase_cap": 0,
}
`;

exports[`recipe-nesting can include guild item decorations 1`] = `
Array [
  Object {
    "achievement_id": undefined,
    "components": Array [
      Object {
        "achievement_id": undefined,
        "components": Array [
          Object {
            "id": 2,
            "quantity": 2,
            "type": "Item",
          },
          Object {
            "id": 1337,
            "quantity": 1,
            "type": "Item",
          },
        ],
        "daily_purchase_cap": 0,
        "disciplines": Array [
          "Scribe",
        ],
        "id": 1002,
        "merchant": undefined,
        "min_rating": 400,
        "multipleRecipeCount": 1,
        "output": 1,
        "output_range": undefined,
        "prerequisites": Array [
          Object {
            "id": 1,
            "type": "Recipe",
          },
        ],
        "quantity": 2,
        "type": "Recipe",
        "upgrade_id": undefined,
        "weekly_purchase_cap": 0,
      },
    ],
    "daily_purchase_cap": 0,
    "disciplines": Array [
      "Scribe",
    ],
    "id": 1001,
    "merchant": undefined,
    "min_rating": 400,
    "multipleRecipeCount": 1,
    "output": 1,
    "output_range": undefined,
    "prerequisites": Array [
      Object {
        "id": 2,
        "type": "Recipe",
      },
    ],
    "quantity": 1,
    "type": "Recipe",
    "upgrade_id": undefined,
    "weekly_purchase_cap": 0,
  },
  Object {
    "achievement_id": undefined,
    "components": Array [
      Object {
        "id": 2,
        "quantity": 2,
        "type": "Item",
      },
      Object {
        "id": 1337,
        "quantity": 1,
        "type": "Item",
      },
    ],
    "daily_purchase_cap": 0,
    "disciplines": Array [
      "Scribe",
    ],
    "id": 1002,
    "merchant": undefined,
    "min_rating": 400,
    "multipleRecipeCount": 1,
    "output": 1,
    "output_range": undefined,
    "prerequisites": Array [
      Object {
        "id": 1,
        "type": "Recipe",
      },
    ],
    "quantity": 1,
    "type": "Recipe",
    "upgrade_id": undefined,
    "weekly_purchase_cap": 0,
  },
]
`;

exports[`recipe-nesting can include guild item ingredients 1`] = `
Object {
  "achievement_id": undefined,
  "components": Array [
    Object {
      "id": 1337,
      "quantity": 1,
      "type": "Item",
    },
    Object {
      "achievement_id": undefined,
      "components": Array [
        Object {
          "achievement_id": undefined,
          "components": Array [
            Object {
              "id": 19697,
              "quantity": 10,
              "type": "Item",
            },
            Object {
              "id": 19704,
              "quantity": 1,
              "type": "Item",
            },
          ],
          "daily_purchase_cap": 0,
          "disciplines": Array [
            "Armorsmith",
            "Artificer",
            "Weaponsmith",
            "Scribe",
            "Huntsman",
          ],
          "id": 19679,
          "merchant": undefined,
          "min_rating": 0,
          "multipleRecipeCount": 1,
          "output": 5,
          "output_range": undefined,
          "prerequisites": Array [
            Object {
              "id": 16,
              "type": "Recipe",
            },
          ],
          "quantity": 3,
          "type": "Recipe",
          "upgrade_id": undefined,
          "weekly_purchase_cap": 0,
        },
      ],
      "daily_purchase_cap": 0,
      "disciplines": Array [
        "Scribe",
      ],
      "id": 77749,
      "merchant": undefined,
      "min_rating": 250,
      "multipleRecipeCount": 1,
      "output": 1,
      "output_range": undefined,
      "prerequisites": Array [
        Object {
          "id": 11756,
          "type": "Recipe",
        },
      ],
      "quantity": 7,
      "type": "Recipe",
      "upgrade_id": 696,
      "weekly_purchase_cap": 0,
    },
  ],
  "daily_purchase_cap": 0,
  "disciplines": Array [
    "Leatherworker",
    "Armorsmith",
    "Tailor",
  ],
  "id": 1234,
  "merchant": undefined,
  "min_rating": 175,
  "multipleRecipeCount": 1,
  "output": 1,
  "output_range": undefined,
  "prerequisites": Array [
    Object {
      "id": 69,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "type": "Recipe",
  "upgrade_id": undefined,
  "weekly_purchase_cap": 0,
}
`;

exports[`recipe-nesting doesnt thrown an error for recursive recipes 1`] = `
Object {
  "achievement_id": undefined,
  "components": Array [
    Object {
      "id": 88770,
      "quantity": 2,
      "type": "Item",
    },
    Object {
      "achievement_id": undefined,
      "components": Array [
        Object {
          "achievement_id": undefined,
          "components": Array [
            Object {
              "achievement_id": undefined,
              "components": Array [
                Object {
                  "id": 88770,
                  "quantity": 2,
                  "type": "Item",
                },
                Object {
                  "id": 88773,
                  "quantity": 2,
                  "type": "Item",
                },
              ],
              "daily_purchase_cap": 0,
              "disciplines": Array [
                "Artificer",
                "Weaponsmith",
                "Scribe",
                "Huntsman",
              ],
              "id": 88772,
              "merchant": undefined,
              "min_rating": 400,
              "multipleRecipeCount": 1,
              "output": 1,
              "output_range": undefined,
              "prerequisites": Array [
                Object {
                  "id": 2,
                  "type": "Recipe",
                },
              ],
              "quantity": 2,
              "type": "Recipe",
              "upgrade_id": undefined,
              "weekly_purchase_cap": 0,
            },
          ],
          "daily_purchase_cap": 0,
          "disciplines": Array [
            "Artificer",
            "Weaponsmith",
            "Scribe",
            "Huntsman",
          ],
          "id": 88774,
          "merchant": undefined,
          "min_rating": 400,
          "multipleRecipeCount": 1,
          "output": 1,
          "output_range": undefined,
          "prerequisites": Array [
            Object {
              "id": 2,
              "type": "Recipe",
            },
          ],
          "quantity": 2,
          "type": "Recipe",
          "upgrade_id": undefined,
          "weekly_purchase_cap": 0,
        },
        Object {
          "achievement_id": undefined,
          "components": Array [
            Object {
              "achievement_id": undefined,
              "components": Array [
                Object {
                  "id": 88770,
                  "quantity": 2,
                  "type": "Item",
                },
                Object {
                  "id": 88773,
                  "quantity": 2,
                  "type": "Item",
                },
              ],
              "daily_purchase_cap": 0,
              "disciplines": Array [
                "Artificer",
                "Weaponsmith",
                "Scribe",
                "Huntsman",
              ],
              "id": 88772,
              "merchant": undefined,
              "min_rating": 400,
              "multipleRecipeCount": 1,
              "output": 1,
              "output_range": undefined,
              "prerequisites": Array [
                Object {
                  "id": 2,
                  "type": "Recipe",
                },
              ],
              "quantity": 2,
              "type": "Recipe",
              "upgrade_id": undefined,
              "weekly_purchase_cap": 0,
            },
            Object {
              "id": 88775,
              "quantity": 1,
              "type": "Item",
            },
          ],
          "daily_purchase_cap": 0,
          "disciplines": Array [
            "Scribe",
          ],
          "id": 88775,
          "merchant": undefined,
          "min_rating": 250,
          "multipleRecipeCount": 1,
          "output": 1,
          "output_range": undefined,
          "prerequisites": Array [
            Object {
              "id": 900011,
              "type": "Recipe",
            },
          ],
          "quantity": 1,
          "type": "Recipe",
          "upgrade_id": 9001,
          "weekly_purchase_cap": 0,
        },
      ],
      "daily_purchase_cap": 0,
      "disciplines": Array [
        "Artificer",
        "Weaponsmith",
        "Scribe",
        "Huntsman",
      ],
      "id": 88773,
      "merchant": undefined,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 1,
      "output_range": undefined,
      "prerequisites": Array [
        Object {
          "id": 2,
          "type": "Recipe",
        },
      ],
      "quantity": 2,
      "type": "Recipe",
      "upgrade_id": undefined,
      "weekly_purchase_cap": 0,
    },
  ],
  "daily_purchase_cap": 0,
  "disciplines": Array [
    "Artificer",
    "Weaponsmith",
    "Scribe",
    "Huntsman",
  ],
  "id": 88772,
  "merchant": undefined,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "output_range": undefined,
  "prerequisites": Array [
    Object {
      "id": 2,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "type": "Recipe",
  "upgrade_id": undefined,
  "weekly_purchase_cap": 0,
}
`;

exports[`recipe-nesting doesnt thrown an error for self-referencing recipes 1`] = `
Object {
  "achievement_id": undefined,
  "components": Array [
    Object {
      "id": 88771,
      "quantity": 3,
      "type": "Item",
    },
    Object {
      "id": 88770,
      "quantity": 2,
      "type": "Item",
    },
  ],
  "daily_purchase_cap": 0,
  "disciplines": Array [
    "Artificer",
    "Weaponsmith",
    "Scribe",
    "Huntsman",
  ],
  "id": 88771,
  "merchant": undefined,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "output_range": undefined,
  "prerequisites": Array [
    Object {
      "id": 2,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "type": "Recipe",
  "upgrade_id": undefined,
  "weekly_purchase_cap": 0,
}
`;

exports[`recipe-nesting excludes components for Condensed Ley-Line Essence items if they are components of each other 1`] = `
Array [
  Object {
    "achievement_id": undefined,
    "components": Array [
      Object {
        "id": 24272,
        "quantity": 1,
        "type": "Item",
      },
      Object {
        "id": 24464,
        "quantity": 1,
        "type": "Item",
      },
      Object {
        "id": 24326,
        "quantity": 1,
        "type": "Item",
      },
      Object {
        "id": 91224,
        "quantity": 2,
        "type": "Item",
      },
    ],
    "daily_purchase_cap": 0,
    "disciplines": Array [
      "Mystic Forge",
    ],
    "id": 91137,
    "merchant": undefined,
    "min_rating": 400,
    "multipleRecipeCount": 3,
    "output": 1,
    "output_range": undefined,
    "prerequisites": Array [
      Object {
        "id": 1,
        "type": "Recipe",
      },
    ],
    "quantity": 1,
    "type": "Recipe",
    "upgrade_id": undefined,
    "weekly_purchase_cap": 0,
  },
  Object {
    "achievement_id": undefined,
    "components": Array [
      Object {
        "id": 24272,
        "quantity": 1,
        "type": "Item",
      },
      Object {
        "id": 24534,
        "quantity": 1,
        "type": "Item",
      },
      Object {
        "id": 24326,
        "quantity": 1,
        "type": "Item",
      },
      Object {
        "id": 91224,
        "quantity": 2,
        "type": "Item",
      },
    ],
    "daily_purchase_cap": 0,
    "disciplines": Array [
      "Mystic Forge",
    ],
    "id": 91171,
    "merchant": undefined,
    "min_rating": 400,
    "multipleRecipeCount": 3,
    "output": 1,
    "output_range": undefined,
    "prerequisites": Array [
      Object {
        "id": 2,
        "type": "Recipe",
      },
    ],
    "quantity": 1,
    "type": "Recipe",
    "upgrade_id": undefined,
    "weekly_purchase_cap": 0,
  },
  Object {
    "achievement_id": undefined,
    "components": Array [
      Object {
        "id": 24272,
        "quantity": 1,
        "type": "Item",
      },
      Object {
        "id": 24464,
        "quantity": 1,
        "type": "Item",
      },
      Object {
        "id": 24326,
        "quantity": 1,
        "type": "Item",
      },
      Object {
        "id": 91224,
        "quantity": 2,
        "type": "Item",
      },
    ],
    "daily_purchase_cap": 0,
    "disciplines": Array [
      "Mystic Forge",
    ],
    "id": 91222,
    "merchant": undefined,
    "min_rating": 400,
    "multipleRecipeCount": 3,
    "output": 1,
    "output_range": undefined,
    "prerequisites": Array [
      Object {
        "id": 3,
        "type": "Recipe",
      },
    ],
    "quantity": 1,
    "type": "Recipe",
    "upgrade_id": undefined,
    "weekly_purchase_cap": 0,
  },
  Object {
    "achievement_id": undefined,
    "components": Array [
      Object {
        "id": 24272,
        "quantity": 1,
        "type": "Item",
      },
      Object {
        "id": 24465,
        "quantity": 1,
        "type": "Item",
      },
      Object {
        "id": 91137,
        "quantity": 1,
        "type": "Item",
      },
      Object {
        "id": 91224,
        "quantity": 2,
        "type": "Item",
      },
    ],
    "daily_purchase_cap": 0,
    "disciplines": Array [
      "Mystic Forge",
    ],
    "id": 91224,
    "merchant": undefined,
    "min_rating": 400,
    "multipleRecipeCount": 3,
    "output": 1,
    "output_range": undefined,
    "prerequisites": Array [
      Object {
        "id": 4,
        "type": "Recipe",
      },
    ],
    "quantity": 1,
    "type": "Recipe",
    "upgrade_id": undefined,
    "weekly_purchase_cap": 0,
  },
]
`;

exports[`recipe-nesting orders the components correctly 1`] = `
Object {
  "achievement_id": undefined,
  "components": Array [
    Object {
      "id": 24284,
      "quantity": 3,
      "type": "Item",
    },
    Object {
      "achievement_id": undefined,
      "components": Array [
        Object {
          "id": 19741,
          "quantity": 2,
          "type": "Item",
        },
      ],
      "daily_purchase_cap": 0,
      "disciplines": Array [
        "Leatherworker",
        "Armorsmith",
        "Tailor",
        "Scribe",
      ],
      "id": 19742,
      "merchant": undefined,
      "min_rating": 150,
      "multipleRecipeCount": 1,
      "output": 1,
      "output_range": undefined,
      "prerequisites": Array [
        Object {
          "id": 7,
          "type": "Recipe",
        },
      ],
      "quantity": 1,
      "type": "Recipe",
      "upgrade_id": undefined,
      "weekly_purchase_cap": 0,
    },
    Object {
      "id": 24285,
      "quantity": 3,
      "type": "Item",
    },
    Object {
      "id": 24286,
      "quantity": 3,
      "type": "Item",
    },
  ],
  "daily_purchase_cap": 0,
  "disciplines": Array [
    "Leatherworker",
    "Armorsmith",
    "Tailor",
  ],
  "id": 19814,
  "merchant": undefined,
  "min_rating": 175,
  "multipleRecipeCount": 1,
  "output": 1,
  "output_range": undefined,
  "prerequisites": Array [
    Object {
      "id": 69,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "type": "Recipe",
  "upgrade_id": undefined,
  "weekly_purchase_cap": 0,
}
`;

exports[`recipe-nesting works for recipes with same sub-components 1`] = `
Object {
  "achievement_id": undefined,
  "components": Array [
    Object {
      "achievement_id": undefined,
      "components": Array [
        Object {
          "id": 99995,
          "quantity": 2,
          "type": "Item",
        },
      ],
      "daily_purchase_cap": 0,
      "disciplines": Array [
        "Artificer",
        "Weaponsmith",
        "Scribe",
        "Huntsman",
      ],
      "id": 99994,
      "merchant": undefined,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 1,
      "output_range": undefined,
      "prerequisites": Array [
        Object {
          "id": 12421412312,
          "type": "Recipe",
        },
      ],
      "quantity": 1,
      "type": "Recipe",
      "upgrade_id": undefined,
      "weekly_purchase_cap": 0,
    },
    Object {
      "achievement_id": undefined,
      "components": Array [
        Object {
          "achievement_id": undefined,
          "components": Array [
            Object {
              "id": 99995,
              "quantity": 2,
              "type": "Item",
            },
          ],
          "daily_purchase_cap": 0,
          "disciplines": Array [
            "Artificer",
            "Weaponsmith",
            "Scribe",
            "Huntsman",
          ],
          "id": 99994,
          "merchant": undefined,
          "min_rating": 400,
          "multipleRecipeCount": 1,
          "output": 1,
          "output_range": undefined,
          "prerequisites": Array [
            Object {
              "id": 12421412312,
              "type": "Recipe",
            },
          ],
          "quantity": 2,
          "type": "Recipe",
          "upgrade_id": undefined,
          "weekly_purchase_cap": 0,
        },
      ],
      "daily_purchase_cap": 0,
      "disciplines": Array [
        "Artificer",
        "Weaponsmith",
        "Scribe",
        "Huntsman",
      ],
      "id": 99991,
      "merchant": undefined,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 1,
      "output_range": undefined,
      "prerequisites": Array [
        Object {
          "id": 987654645,
          "type": "Recipe",
        },
      ],
      "quantity": 2,
      "type": "Recipe",
      "upgrade_id": undefined,
      "weekly_purchase_cap": 0,
    },
    Object {
      "achievement_id": undefined,
      "components": Array [
        Object {
          "achievement_id": undefined,
          "components": Array [
            Object {
              "id": 99995,
              "quantity": 2,
              "type": "Item",
            },
          ],
          "daily_purchase_cap": 0,
          "disciplines": Array [
            "Artificer",
            "Weaponsmith",
            "Scribe",
            "Huntsman",
          ],
          "id": 99994,
          "merchant": undefined,
          "min_rating": 400,
          "multipleRecipeCount": 1,
          "output": 1,
          "output_range": undefined,
          "prerequisites": Array [
            Object {
              "id": 12421412312,
              "type": "Recipe",
            },
          ],
          "quantity": 2,
          "type": "Recipe",
          "upgrade_id": undefined,
          "weekly_purchase_cap": 0,
        },
      ],
      "daily_purchase_cap": 0,
      "disciplines": Array [
        "Artificer",
        "Weaponsmith",
        "Scribe",
        "Huntsman",
      ],
      "id": 99992,
      "merchant": undefined,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 1,
      "output_range": undefined,
      "prerequisites": Array [
        Object {
          "id": 767567,
          "type": "Recipe",
        },
      ],
      "quantity": 2,
      "type": "Recipe",
      "upgrade_id": undefined,
      "weekly_purchase_cap": 0,
    },
    Object {
      "achievement_id": undefined,
      "components": Array [
        Object {
          "achievement_id": undefined,
          "components": Array [
            Object {
              "id": 99995,
              "quantity": 2,
              "type": "Item",
            },
          ],
          "daily_purchase_cap": 0,
          "disciplines": Array [
            "Artificer",
            "Weaponsmith",
            "Scribe",
            "Huntsman",
          ],
          "id": 99994,
          "merchant": undefined,
          "min_rating": 400,
          "multipleRecipeCount": 1,
          "output": 1,
          "output_range": undefined,
          "prerequisites": Array [
            Object {
              "id": 12421412312,
              "type": "Recipe",
            },
          ],
          "quantity": 2,
          "type": "Recipe",
          "upgrade_id": undefined,
          "weekly_purchase_cap": 0,
        },
      ],
      "daily_purchase_cap": 0,
      "disciplines": Array [
        "Artificer",
        "Weaponsmith",
        "Scribe",
        "Huntsman",
      ],
      "id": 99993,
      "merchant": undefined,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 1,
      "output_range": undefined,
      "prerequisites": Array [
        Object {
          "id": 2344356,
          "type": "Recipe",
        },
      ],
      "quantity": 2,
      "type": "Recipe",
      "upgrade_id": undefined,
      "weekly_purchase_cap": 0,
    },
  ],
  "daily_purchase_cap": 0,
  "disciplines": Array [
    "Artificer",
    "Weaponsmith",
    "Scribe",
    "Huntsman",
  ],
  "id": 99990,
  "merchant": undefined,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "output_range": undefined,
  "prerequisites": Array [
    Object {
      "id": 1293083123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "type": "Recipe",
  "upgrade_id": undefined,
  "weekly_purchase_cap": 0,
}
`;
